--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -1090,6 +1090,10 @@ msgstr "Titus"
 msgid "Translation memory"
 msgstr "Translation memory"
 
+#: projeto.sverseabsentfromproject
+msgid "[This project does not contain this verse]"
+msgstr "[This project does not contain this verse]"
+
 #: projeto.szechariah
 msgctxt "projeto.szechariah"
 msgid "Zecariah"
@@ -1272,13 +1276,11 @@ msgid "Select all"
 msgstr "Select all"
 
 #: tfrmapplypatch.button1.caption
-#, fuzzy
 msgctxt "tfrmapplypatch.button1.caption"
 msgid "OK"
 msgstr "OK"
 
 #: tfrmapplypatch.button2.caption
-#, fuzzy
 msgctxt "tfrmapplypatch.button2.caption"
 msgid "Cancel"
 msgstr "Cancel"
@@ -1287,10 +1289,6 @@ msgstr "Cancel"
 msgctxt "tfrmapplypatch.caption"
 msgid "Apply patch..."
 msgstr "Apply patch..."
-
-#: tfrmapplypatch.groupbox2.caption
-msgid "Preview"
-msgstr "Preview"
 
 #: tfrmdictionarypopup.caption
 msgid "Dictionary"
