--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: formapplypatch.spatchsuccessfullyapplied
 msgid "Patch successfully applied"
@@ -18,6 +18,10 @@ msgstr "Patch successfully applied"
 #: formexportar.sanalyticalconcordance
 msgid "AnalyticalConcordance"
 msgstr "AnalyticalConcordance"
+
+#: formexportar.slogosbiblemodule
+msgid "Logos Bible module (*.docx)"
+msgstr "Logos Bible module (*.docx)"
 
 #: formexportar.smyswordmodule
 msgid "MySword Bible module (*.bbl.mybible)"
@@ -594,6 +598,15 @@ msgctxt "projeto.sleviticus"
 msgid "Leviticus"
 msgstr "Leviticus"
 
+#: projeto.slinebreaksintext
+#| msgid "A verse cannot contain line breaks. Please check you text."
+msgid "A verse cannot contain line breaks. Your changes will be discarded."
+msgstr "A verse cannot contain line breaks. Your changes will be discarded."
+
+#: projeto.slinebreaksintexttitle
+msgid "Edit error"
+msgstr "Edit error"
+
 #: projeto.sluke
 msgctxt "projeto.sluke"
 msgid "Luke"
@@ -1005,6 +1018,10 @@ msgctxt "tfrmexportarprojeto.label2.caption"
 msgid "Module properties"
 msgstr "Module properties"
 
+#: tfrmexportarprojeto.label3.caption
+msgid "Chapter view verse rules"
+msgstr "Chapter view verse rules"
+
 #: tfrmexportarprojeto.leabreviacao.editlabel.caption
 msgid "Abbreviation"
 msgstr "Abbreviation"
@@ -1018,6 +1035,14 @@ msgstr "Salvar módulo como..."
 msgctxt "tfrmexportarprojeto.savedialogconcordancia.title"
 msgid "Salvar módulo como..."
 msgstr "Salvar módulo como..."
+
+#: tfrmexportarprojeto.stringgridinterlinear.columns[0].title.caption
+msgid "From"
+msgstr "From"
+
+#: tfrmexportarprojeto.stringgridinterlinear.columns[1].title.caption
+msgid "To"
+msgstr "To"
 
 #: tfrmexportarprojeto.tabsheet1.caption
 msgid "Tagged destination text"
