--- a/languages/iBiblia.pt.po
+++ b/languages/iBiblia.pt.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: formapplypatch.spatchsuccessfullyapplied
 msgid "Patch successfully applied"
@@ -18,6 +18,10 @@ msgstr "Patch aplicado com sucesso"
 #: formexportar.sanalyticalconcordance
 msgid "AnalyticalConcordance"
 msgstr "ConcordanciaAnalitica"
+
+#: formexportar.slogosbiblemodule
+msgid "Logos Bible module (*.docx)"
+msgstr "Módulo de Bíblia do Logos (*.docx)"
 
 #: formexportar.smyswordmodule
 msgid "MySword Bible module (*.bbl.mybible)"
@@ -578,6 +582,14 @@ msgctxt "projeto.sleviticus"
 msgid "Leviticus"
 msgstr "Levítico"
 
+#: projeto.slinebreaksintext
+msgid "A verse cannot contain line breaks. Your changes will be discarded."
+msgstr "Um versículo não pode conter quebras de linha. As suas alterações serão descartadas."
+
+#: projeto.slinebreaksintexttitle
+msgid "Edit error"
+msgstr "Erro de edição"
+
 #: projeto.sluke
 msgctxt "projeto.sluke"
 msgid "Luke"
@@ -989,6 +1001,10 @@ msgctxt "tfrmexportarprojeto.label2.caption"
 msgid "Module properties"
 msgstr "Propriedades do módulo"
 
+#: tfrmexportarprojeto.label3.caption
+msgid "Chapter view verse rules"
+msgstr "Regras da visualização do capítulo"
+
 #: tfrmexportarprojeto.leabreviacao.editlabel.caption
 msgid "Abbreviation"
 msgstr "Abreviação"
@@ -1002,6 +1018,14 @@ msgstr "Salvar módulo como..."
 msgctxt "tfrmexportarprojeto.savedialogconcordancia.title"
 msgid "Salvar módulo como..."
 msgstr "Salvar módulo como..."
+
+#: tfrmexportarprojeto.stringgridinterlinear.columns[0].title.caption
+msgid "From"
+msgstr "De"
+
+#: tfrmexportarprojeto.stringgridinterlinear.columns[1].title.caption
+msgid "To"
+msgstr "Para"
 
 #: tfrmexportarprojeto.tabsheet1.caption
 msgid "Tagged destination text"
