Better handling of a new project name
Now the user is given the option to choose another name if a project
with the selected name already exists. There is no option to override a
project as of yet.

--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -129,6 +129,14 @@ msgstr "Destination"
 msgid "Interlinear"
 msgstr "Interlinear"
 
+#: formprincipal.sinvalidprojectnamequery
+msgid "Do you want to choose a different name?"
+msgstr "Do you want to choose a different name?"
+
+#: formprincipal.sinvalidprojectnametitle
+msgid "A project file with this name already exists"
+msgstr "A project file with this name already exists"
+
 #: formprincipal.sloadingfile
 msgid "Loading %s..."
 msgstr "Loading %s..."
