--- a/languages/iBiblia.pt.po
+++ b/languages/iBiblia.pt.po
@@ -113,8 +113,8 @@ msgstr "Bíblia completa"
 
 #: formnovoprojeto.swholebiblefilter
 msgctxt "formnovoprojeto.swholebiblefilter"
-msgid "theWord Bible modules (*.ont)|*.ont"
-msgstr "Módulos de Bíblia do theWord (*.ont)|*.ont"
+msgid "theWord Bible modules (*.ont, *.ot, *.nt)|*.ont;*.ot;*.nt"
+msgstr "Módulos de Bíblia do theWord (*.ont, *.ot, *.nt)|*.ont;*.ot;*.nt"
 
 #: formprincipal.schanged
 msgid "changed"
@@ -276,8 +276,8 @@ msgstr "Dicionários do theWord (*.dct.twm)|*.dct.twm|Todos os arquivos|*.*"
 
 #: formpropprojeto.snewtestamentfilter
 msgctxt "formpropprojeto.snewtestamentfilter"
-msgid "theWord Bible modules (*.ont, *.nt)|*.ont;*.nt|All files|*.*"
-msgstr "Módulos de Bíblia do theWord (*.ont, *.nt)|*.ont;*.nt|Todos os arquivos|*.*"
+msgid "theWord Bible modules (*.ont, *.nt)|*.ont;*.nt"
+msgstr "Módulos de Bíblia do theWord (*.ont, *.nt)|*.ont;*.nt"
 
 #: formpropprojeto.snewtextimportedsuccessfully
 msgid "New text imported successfully"
@@ -285,8 +285,8 @@ msgstr "Novo texto importado com sucesso"
 
 #: formpropprojeto.soldtestamentfilter
 msgctxt "formpropprojeto.soldtestamentfilter"
-msgid "theWord Bible modules (*.ont, *.ot)|*.ont;*.ot|All files|*.*"
-msgstr "Módulos de Bíblia do theWord (*.ont, *.ot)|*.ont;*.ot|Todos os arquivos|*.*"
+msgid "theWord Bible modules (*.ont, *.ot)|*.ont;*.ot"
+msgstr "Módulos de Bíblia do theWord (*.ont, *.ot)|*.ont;*.ot"
 
 #: formpropprojeto.sopendictionary
 msgid "Please choose a theWord dictionary module..."
@@ -313,8 +313,8 @@ msgstr "Origem"
 
 #: formpropprojeto.swholebiblefilter
 msgctxt "formpropprojeto.swholebiblefilter"
-msgid "theWord Bible modules (*.ont)|*.ont|All files|*.*"
-msgstr "Módulos de Bíblia do theWord (*.ont)|*.ont|Todos os arquivos|*.*"
+msgid "theWord Bible modules (*.ont, *.ot, *.nt)|*.ont;*.ot;*.nt"
+msgstr "Módulos de Bíblia do theWord (*.ont, *.ot, *.nt)|*.ont;*.ot;*.nt"
 
 #: memoversiculo.schangeverse
 msgid "Change verse text?"
@@ -577,6 +577,10 @@ msgstr ""
 msgid "Invalid file, it must have at least %d lines"
 msgstr "Arquivo inválido, ele precisa ter ao menos %d linhas"
 
+#: projeto.sinvalidmoduletype
+msgid "Unknown module extension. Please choose a valid theWord Bible module (.ot, .ont or .nt)"
+msgstr "Módulo com extensão desconhecida. Por favor, escolha um módulo válido do theWord (.ot, .ont ou .nt)"
+
 #: projeto.sisaiah
 msgctxt "projeto.sisaiah"
 msgid "Isaiah"
@@ -673,6 +677,10 @@ msgstr "Mateus"
 msgctxt "projeto.smicah"
 msgid "Micah"
 msgstr "Miqueias"
+
+#: projeto.smoduledoesnotincludescope
+msgid "This module is incompatible with the scope of the project. Please choose a valid module."
+msgstr "Este módulo é incompatível com o escopo do projeto. Por favor, escolha um módulo válido."
 
 #: projeto.smorphologydictionary
 msgid "Morphology Dictionary"
