--- a/languages/iBiblia.en.po
+++ b/languages/iBiblia.en.po
@@ -51,18 +51,17 @@ msgstr "Verse &rules..."
 
 #: formapplypatch.signoredversesonpatch
 msgctxt "formapplypatch.signoredversesonpatch"
-msgid "%d verses are the same as those in the project and were ignored"
-msgstr ""
+msgid "%d verses are identical to what you have in your project and were ignored."
+msgstr "%d verses are identical to what you have in your project and were ignored."
 
 #: formapplypatch.sinfo
-#, fuzzy
 msgctxt "formapplypatch.sinfo"
 msgid "Information"
 msgstr "Information"
 
 #: formapplypatch.snoupdatedversesonpatch
-msgid "There are no updated verses in the patch. Ignoring it."
-msgstr ""
+msgid "The content of this patch is identical to what you have in your project. The patch will not be applied."
+msgstr "The content of this patch is identical to what you have in your project. The patch will not be applied."
 
 #: formapplypatch.spatchsuccessfullyapplied
 msgid "Patch successfully applied"
@@ -462,6 +461,10 @@ msgctxt "projeto.scolossians"
 msgid "Colossians"
 msgstr "Colossians"
 
+#: projeto.sconfirmation
+msgid "Confirmation"
+msgstr ""
+
 #: projeto.scorrupteddata
 #| msgid ""
 #| "Corrupted data, some associations may be lost.This can happen for several reasons:\n"
@@ -830,6 +833,16 @@ msgstr "Titus"
 msgid "Translation memory"
 msgstr "Translation memory"
 
+#: projeto.svaccumprojectconfirmation
+msgid "Vacuuming requires that your project be saved and reopened. Do you want to proceed?"
+msgstr ""
+
+#: projeto.svacuumdone
+#, fuzzy
+msgctxt "projeto.svacuumdone"
+msgid "Vacuum done!"
+msgstr "Vacuum done!"
+
 #: projeto.sverseabsentfromproject
 msgid "[This project does not contain this verse]"
 msgstr "[This project does not contain this verse]"
@@ -1114,22 +1127,21 @@ msgstr "Apply patch..."
 
 #: tfrmapplypatch.labelassociations.caption
 msgid "Associations"
-msgstr ""
+msgstr "Associations"
 
 #: tfrmapplypatch.labelcomments.caption
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #: tfrmapplypatch.labeldsttext.caption
 msgid "Destination text"
-msgstr ""
+msgstr "Destination text"
 
 #: tfrmapplypatch.labelsrctext.caption
 msgid "Source text"
-msgstr ""
+msgstr "Source text"
 
 #: tfrmapplypatch.labelstatus.caption
-#, fuzzy
 msgctxt "tfrmapplypatch.labelstatus.caption"
 msgid "Status"
 msgstr "Status"
@@ -1159,6 +1171,11 @@ msgstr "OK"
 #: tfrmescolherverserules.caption
 msgid "Choose verse rules"
 msgstr "Choose verse rules"
+
+#: tfrmescolherverserules.panel1.caption
+msgctxt "tfrmescolherverserules.panel1.caption"
+msgid "Panel1"
+msgstr "Panel1"
 
 #: tfrmescolherverserules.stringgridverserules.columns[0].title.caption
 msgctxt "tfrmescolherverserules.stringgridverserules.columns[0].title.caption"
@@ -1373,6 +1390,10 @@ msgstr "Auto associate verse"
 msgid "ActionSyncTheWordVerse"
 msgstr "ActionSyncTheWordVerse"
 
+#: tfrmprincipal.actionvaccumproject.caption
+msgid "Vacuum project"
+msgstr "Vacuum project"
+
 #: tfrmprincipal.actionversoanterior.caption
 msgid "Previous"
 msgstr "Previous"
@@ -1449,6 +1470,10 @@ msgstr "Run the auto-association whenever you navigate to an unassociated verse"
 #: tfrmprincipal.menuitem23.caption
 msgid "Language"
 msgstr "Language"
+
+#: tfrmprincipal.menuitem24.caption
+msgid "Maintenance"
+msgstr "Maintenance"
 
 #: tfrmprincipal.menuitem5.caption
 msgid "Navigation"
@@ -1574,6 +1599,7 @@ msgid "Open existing association project"
 msgstr "Open existing association project"
 
 #: tfrmprincipal.panel1.caption
+msgctxt "tfrmprincipal.panel1.caption"
 msgid "Panel1"
 msgstr "Panel1"
 
@@ -1635,7 +1661,7 @@ msgstr "&Paste &Strong's tags"
 
 #: versiculo.srighttoleft
 msgid "Right to left text"
-msgstr ""
+msgstr "Right to left text"
 
 #: versiculo.ssavetofile
 msgid "&Save text to file..."
